--- a/Pipfile
+++ b/Pipfile
@@ -1,4 +1,4 @@
-[[source]]
+﻿[[source]]
 name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
@@ -7,6 +7,3 @@ verify_ssl = true
 
 [packages]
 django = "*"
-
-[requires]
-python_version = "3.8"
