--- a/Pipfile
+++ b/Pipfile
@@ -1,9 +1,8 @@
-﻿[[source]]
+[[source]]
 name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-
 [packages]
 django = "*"
+
